[package]
name = "ebqn"
version = "0.1.0"
authors = ["Rowan Cannaday <cannadayr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ebqn"
path = "rs_src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.22.0"
once_cell = "1.8.0"
cc_mt = { git = "https://github.com/cannadayr/cc-mt", rev = "bce4a5de" }
log = "0.4.14"
#syslog = "^4.0"
log-panics = "2.0.0"
env_logger = "0.9.0"
enum-as-inner = "0.3.3"
itertools = "0.10.3"
num-traits = "0.2.14"
