[package]
name = "rsbqn"
version = "0.1.0"
authors = ["Rowan Cannaday <cannadayr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3

[lib]
name = "rsbqn"
path = "src/lib.rs"
crate-type = ["dylib","rlib"]

[[bin]]
name = "rsbqn"
path = "src/rsbqn.rs"
required-features = ["repl"]

[profile.bench]
debug = 1

[dependencies]
once_cell = "1.8.0"
bacon_rajan_cc = { git = "https://github.com/fitzgen/bacon-rajan-cc", rev = "a30621ee3b1a8bc5358a5fb333b7a1dd309060be" }
log = "0.4.14"
env_logger = "0.9.0"
enum-as-inner = "0.3.3"
itertools = "0.10.3"
num-traits = "0.2.14"

[dependencies.coz]
version = "0.1"
optional = true
default-features = false

[dependencies.dhat]
version = "0.2.4"
optional = true
default-features = false

[dependencies.rustyline]
version = "9.1.2"
optional = true
default-features = false

[features]
default = []
debug-fns = [] # fn debugging
debug-ops = [] # stack debugging
repl = ["rustyline"] # include rsbqn repl
coz-fns = ["coz"]
coz-ops = ["coz"]
coz-loop = ["coz"]
